--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,54 @@
-<p>
-  search works!
-</p>
+<div *ngIf="profile">
+  <div class="panel panel-default">
+    <div class="panel-Heading">
+      {{profile.name}} <small>({{profile.login}})</small>
+      , <span *ngIf="profile.location">Stays at {{profile.location}}</span>
+    </div>
+
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-md-3">
+          <img src="{{profile.avatar_url}}" class="img-circle img-responsive"alt="Profile Picture">
+        </div>
+        <div class="col-sm-5">
+          <ul class="list-group">
+            <li class="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
+            <li class="list-group-item" *ngIf="profile.url" target="_blank">Profile: <a href="{{profile.html_url}}">{{profile.html_url}}</a></li>
+            <li class="list-group-item" *ngIf="profile.email">Email: <a href="{{profile.email}}">{{profile.email}}</a></li>
+            <li class="list-group-item" *ngIf="profile.public_repos">Public Repositories: {{profile.public_repos}}</li>
+          </ul>
+        </div>
+
+        <div class="col-sm-4">
+          <div>
+            <p>
+              <span class="label label-primary">{{profile.followers}} Followers</span>
+              <span class="label label-success">{{profile.following}} Following</span>
+              <span class="label label-default">{{profile.public_gists}} Public Gists</span>
+              <span class="label label-info">{{profile.public_repos}} Public Repositories</span>
+            </p>
+
+            <hr>
+
+            <p> <a href="{{profile.html_url}}" target="_blank" class="btn btn-primary btn-sm">View Profile</a></p>
+
+            <hr>
+
+            <div class=panel panel-default>
+              <div class="panel-Heading">
+                <h3 class="panel-title">Repos</h3>
+              </div>
+              <div class="panel-body" *ngFor="let repo of repos">
+                <p>
+
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</div>
