--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,10 @@
+<form>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Search Name</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Search Name Here">
+  </div>
+</form>
+
 <div *ngIf="profile">
   <div class="panel panel-default">
     <div class="panel-Heading">
@@ -39,7 +46,7 @@
                 <h3 class="panel-title">Repos</h3>
               </div>
               <div class="panel-body" *ngFor="let repo of Repos">
-                <p>
+                <p class="clearfix">
                   {{repo.name}} <a href="{{repo.html_url}}" target="_blank" class="btn btn-sm btn-primary pull-right">View Project on GitHub</a>
                 </p>
                 <p>{{repo.description}}</p>
