Modified search button

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
-<form>
+<hr>
+<form action="">
   <div class="form-group">
-    <label for="exampleInputPassword1">Search Name</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Search Name Here">
+  <input type="text" class="form-control" placeholder="Username:">
   </div>
 </form>
 
