--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,6 @@
-<hr>
-<form action="">
+<form action="" class="form-search">
   <div class="form-group">
-  <input type="text" class="form-control" placeholder="Username:">
+  <input type="text" class="form-control" placeholder="Username:" [(ngModel)]="username" name="username" (keyup)="findProfile()">
   </div>
 </form>
 
@@ -45,10 +44,13 @@
               <div class="panel-Heading">
                 <h3 class="panel-title">Repos</h3>
               </div>
-              <div class="panel-body" *ngFor="let repo of Repos">
+              <div class="panel-body" *ngFor="let repo of repos">
                 <p class="clearfix">
                   {{repo.name}} <a href="{{repo.html_url}}" target="_blank" class="btn btn-sm btn-primary pull-right">View Project on GitHub</a>
                 </p>
+
+                <hr>
+
                 <p>{{repo.description}}</p>
               </div>
             </div>
