--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,3 +1,12 @@
 .form-search{
   padding-top: 40px;
 }
+
+.navbar{
+  /* border: 2px solid red; */
+  /* background-color: black; */
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+  font-weight: bolder;
+  font-size: 70px;
+
+}
